# ext-effects-parsers

./: ext-effects-parsers.cabal  readme.md  stack.yaml
src/: Parsers.hs
tests/: Tests.hs
