name:                ext-effects-parsers
version:             0.1.0.0
synopsis:            Monadic Parsers Combinatos library based on Extensible Effects Subclasses
license-file:        LICENSE
author:              Georgiy Lukjanov
maintainer:          georgiylukjanov@gmail.com
category:            Text
build-type:          Simple
extra-source-files:  readme.md
cabal-version:       >=1.10

library
  exposed-modules:     Parsers
  other-extensions:    FlexibleContexts, TypeOperators
  build-depends:       base >=4.7,
                       freer
  hs-source-dirs:      src
  default-language:    Haskell2010
